--- a/02-http-routing/views/about.html
+++ b/02-http-routing/views/about.html
@@ -36,7 +36,7 @@
 
   <main class="py-5 px-3">
     <div class="container">
-      <h1>Welcome to Home Page</h1>
+      <h1>Welcome to About Page</h1>
     </div>
   </main>
 </body>
