--- a/04-area-calculator/views/circle.html
+++ b/04-area-calculator/views/circle.html
@@ -5,9 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Area Calculator | Triangle</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+
+  <style>
+    .form-control:focus {
+      box-shadow: none;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand bg-body-tertiary">
     <div class="container-fluid">
       <a href="/" class="navbar-brand">Area Calculator</a>
 
@@ -24,5 +30,28 @@
       </ul>
     </div>
   </nav>
+
+  <main class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-md-auto">
+          <div class="d-flex flex-column gap-4">
+            <h2 class="mb-0 fw-bold display-6 text-center">Circle Calculator</h2>
+
+            <form action="" class="d-flex flex-column gap-3">
+              <div class="d-flex flex-column gap-1">
+                <label for="radius" class="form-label">Enter Radius</label>
+                <input type="text" name="radius" id="radius" class="form-control" />
+              </div>
+  
+              <button type="submit" class="btn btn-primary">
+                Calculate
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
