--- a/04-area-calculator/views/index.html
+++ b/04-area-calculator/views/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-secondary">
+  <nav class="navbar navbar-expand bg-body-secondary">
     <div class="container-fluid">
       <a href="/" class="navbar-brand">Area Calculator</a>
 
@@ -24,5 +24,15 @@
       </ul>
     </div>
   </nav>
+
+  <main class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-md-auto">
+          <h1 class="fw-bold mb-0 display-2 text-center">Home Page</h1>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
