form action and method added

--- a/04-area-calculator/views/circle.html
+++ b/04-area-calculator/views/circle.html
@@ -38,7 +38,7 @@
           <div class="d-flex flex-column gap-4">
             <h2 class="mb-0 fw-bold display-6 text-center">Circle Calculator</h2>
 
-            <form action="" class="d-flex flex-column gap-3">
+            <form action="/circle" method="POST" class="d-flex flex-column gap-3">
               <div class="d-flex flex-column gap-1">
                 <label for="radius" class="form-label">Enter Radius</label>
                 <input type="text" name="radius" id="radius" class="form-control" />
