--- a/04-area-calculator/views/triangle.html
+++ b/04-area-calculator/views/triangle.html
@@ -38,7 +38,7 @@
           <div class="d-flex flex-column gap-4">
             <h2 class="mb-0 fw-bold display-6 text-center">Triangle Calculator</h2>
 
-            <form action="" class="d-flex flex-column gap-3">
+            <form action="/triangle" method="POST" class="d-flex flex-column gap-3">
               <div class="d-flex flex-column gap-1">
                 <label for="base" class="form-label">Enter Base</label>
                 <input type="text" name="base" id="base" class="form-control" />
