--- a/07-static-middleware/views/index.html
+++ b/07-static-middleware/views/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Static Middleware</title>
-  <link rel="stylesheet" href="../assets/css/style.css"/>
+  <link rel="stylesheet" href="/assets/css/style.css"/>
 </head>
 <body>
   <main class="py-5">
     <div class="container">
       <figure>
-        <img src="../assets/images/favicon.svg" alt="node-icon"/>
+        <img src="/assets/images/favicon.svg" alt="node-icon"/>
       </figure>
-      
+
       <h1 class="main-heading">Hello from Home Route</h1>
     </div>
   </main>
