static-middleware added and style updated

--- a/07-static-middleware/views/index.html
+++ b/07-static-middleware/views/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="py-5">
     <div class="container">
-      <figure>
+      <figure class="logo">
         <img src="/assets/images/favicon.svg" alt="node-icon"/>
       </figure>
 
