--- a/07-static-middleware/public/assets/css/style.css
+++ b/07-static-middleware/public/assets/css/style.css
@@ -16,6 +16,8 @@ html {
 
 body {
   font-family: var(--primaryFont);
+  margin: 0;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -29,4 +31,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .py-5 {
   padding-block: 2.5rem;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.logo {
+  max-width: 7.5rem;
+}
+
+.logo img {
+  width: 3rem;
+  height: 3rem;
 }
