--- a/08-MVC-architecture/views/users.html
+++ b/08-MVC-architecture/views/users.html
@@ -27,6 +27,12 @@
       <div class="row">
         <div class="col-md-6 mx-md-auto">
           <h1 class="fw-bold mb-4 display-2 text-center">Create User</h1>
+
+          <form method="POST" action="/users">
+            <input type="text" name="name" class="form-control" placeholder="Enter name" />
+            <input type="number" name="age" class="form-control" placeholder="Enter age" />
+            <button type="submit" class="btn btn-primary">Save User</button>
+          </form>
         </div>
       </div>
     </div>
