--- a/08-MVC-architecture/views/users.html
+++ b/08-MVC-architecture/views/users.html
@@ -28,10 +28,13 @@
         <div class="col-md-6 mx-md-auto">
           <h1 class="fw-bold mb-4 display-2 text-center">Create User</h1>
 
-          <form method="POST" action="/users">
+          <form method="POST" action="/users" class="d-flex flex-column gap-3">
             <input type="text" name="name" class="form-control" placeholder="Enter name" />
             <input type="number" name="age" class="form-control" placeholder="Enter age" />
-            <button type="submit" class="btn btn-primary">Save User</button>
+            
+            <div class="mt-2">
+              <button type="submit" class="btn btn-primary">Save User</button>
+            </div>
           </form>
         </div>
       </div>
