--- a/09-REST-API-without-DB/views/index.html
+++ b/09-REST-API-without-DB/views/index.html
@@ -26,7 +26,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-md-auto">
-          <h1 class="fw-bold mb-0 display-4 text-center">Welcome to REST API</h1>
+          <h1 class="fw-bold mb-0 display-4 text-center">
+            Welcome to <br/> REST API
+          </h1>
         </div>
       </div>
     </div>
