--- a/09-REST-API-without-DB/views/error.html
+++ b/09-REST-API-without-DB/views/error.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page Not Found</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 </head>
 <body>
@@ -29,6 +30,9 @@
           <h2 class="fw-bold mb-0 display-5 text-center text-danger">
             Error 404! <br/> Page Not Found!!!
           </h2>
+          <div class="flex items-center justify-center">
+            <a href=""></a>
+          </div>
         </div>
       </div>
     </div>
