--- a/09-REST-API-without-DB/views/register.html
+++ b/09-REST-API-without-DB/views/register.html
@@ -27,17 +27,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-md-auto">
-          <h2 class="fw-bold display-2 text-danger text-center">
-            <i class="bi bi-exclamation-triangle-fill"></i>
+          <h2 class="fw-bold display-2 text-dark text-center">
+            <i class="bi bi-file-person"></i>
           </h2>
-          <h2 class="fw-bold mb-0 display-5 text-center text-danger">
-            Error 404! <br/> Page Not Found!!!
+          <h2 class="fw-bold mb-0 display-5 text-center text-primary">
+            Register
           </h2>
-          <div class="d-flex align-items-center justify-content-center mt-5">
-            <a href="/" class="btn btn-light fw-semibold">
-              <i class="bi bi-arrow-left"></i> 
-              Back to Home
-            </a>
+          <div class="d-flex align-items-center justify-content-center mt-4">
+            <form action="" method="POST" class="d-flex flex-column gap-3">
+              <input type="text" name="name" class="form-control" placeholder="Enter Name" autocomplete="off" required />
+              <input type="email" name="email" class="form-control" placeholder="Enter Email Address" autocomplete="off" required />
+              <input type="tel" name="phone" class="form-control" placeholder="Enter Phone Number" autocomplete="off" required />
+
+              <div class="mt-4">
+                <button type="submit" class="btn btn-primary">
+                  Register
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
