users controller updated

--- a/09-REST-API-without-DB/views/register.html
+++ b/09-REST-API-without-DB/views/register.html
@@ -27,14 +27,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-md-auto">
-          <h2 class="fw-bold display-2 text-dark text-center">
+          <h2 class="fw-bold display-2 text-secondary text-center">
             <i class="bi bi-file-person"></i>
           </h2>
-          <h2 class="fw-bold mb-0 display-5 text-center text-primary">
+          <h2 class="fw-bold mb-0 display-6 text-center text-dark">
             Register
           </h2>
-          <div class="d-flex align-items-center justify-content-center mt-4">
-            <form action="" method="POST" class="d-flex flex-column gap-3">
+          <div class="d-flex align-items-center justify-content-center mt-4 w-100">
+            <form action="" method="POST" class="d-flex flex-column gap-3 w-100">
               <input type="text" name="name" class="form-control" placeholder="Enter Name" autocomplete="off" required />
               <input type="email" name="email" class="form-control" placeholder="Enter Email Address" autocomplete="off" required />
               <input type="tel" name="phone" class="form-control" placeholder="Enter Phone Number" autocomplete="off" required />
