--- a/10-REST-API-with-MongoDB/views/server.html
+++ b/10-REST-API-with-MongoDB/views/server.html
@@ -17,7 +17,7 @@
             <a href="/" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="/users" class="nav-link">Users</a>
+            <a href="/api/users" class="nav-link">Users</a>
           </li>
         </ul>
       </div>
