--- a/11-express-uploads/views/error.html
+++ b/11-express-uploads/views/error.html
@@ -17,7 +17,7 @@
           <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/api/users" class="nav-link">Users</a>
+          <a href="/uploads" class="nav-link">Uploads</a>
         </li>
       </ul>
     </div>
