--- a/11-express-uploads/views/uploads.html
+++ b/11-express-uploads/views/uploads.html
@@ -13,7 +13,7 @@
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a href="/" class="nav-lin">Home</a>
+          <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
           <a href="/uploads" class="nav-link active" aria-current="page">Uploads</a>
