--- a/11-express-uploads/views/uploads.html
+++ b/11-express-uploads/views/uploads.html
@@ -26,9 +26,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-md-auto">
-          <h1 class="fw-bold mb-0 display-4 text-center">
-            Uploads Audio, Video and Files
-          </h1>
+          <div class="d-flex flex-column gap-5">
+            <h1 class="fw-bold mb-0 display-6 text-center">
+              Upload Files
+            </h1>
+
+            <form action="/uploads" method="POST" class="d-flex flex-column gap-3">
+              <div class="d-flex flex-column gap-1">
+                <label for="uploadimage" class="form-label">Choose Image</label>
+                <input type="file" name="image" class="form-control" id="uploadimage" />
+              </div>
+
+              <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Upload</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
